2006-08-07  David Schleef  <ds@schleef.org>

	* esd.conf: Turn autospawning off by default.  Don't use
	  autospawning.  It doesn't work, and it isn't possible to
	  make it work.  esd should always be started from the session
	  manager.
	* esd_config.c:

2006-05-10  David Schleef  <ds@schleef.org>

	* m4/as-arts.m4: Fix arts detection.  Fixes #341251.  Patch
	  from Vladislav G. Mikhailikov.

2006-04-13  Behdad Esfahbod  <behdad@gnome.org>

	* esdlib.c: Fix build break.

2006-04-13  Kjartan Maraas  <kmaraas@gnome.org>

	* clients.c: (get_new_clients): Fix leak. Coverity #743
	and #875.
	* esd.c: (main): Fix null deref. Coverity #223
	* esdlib.c: Fix null deref. Coverity bug #775
	* esdmgr.c: (esd_get_all_info): Fix leaks. Coverity #773
	and #875.

2005-09-30  David Schleef  <ds@schleef.org>

	* Makefile.am: Don't compile util.o into esd binary, since it's
	  already in libesd.  (Fixes #317554)

2005-08-13  David Schleef  <ds@schleef.org>

	Patch from Thomas Zajic to actually install the documentation.
	* docs/Makefile.am: Fixes #307366

2005-06-18  David Schleef  <ds@schleef.org>

	* autogen.sh: Don't blow away user's ACLOCAL_FLAGS.

2005-06-17  David Schleef  <ds@schleef.org>

	* README: ha ha funny
	* autogen.sh: use gnome-autogen.sh
	* configure.ac: esound, not esd

2005-06-11  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Add audio_arts.c here to get it disted.

2005-06-06  David Schleef  <ds@schleef.org>

	* MAINTAINERS: add me
	* NEWS: news for new release
	* README: remove old stuff and tell people to go away
	* TODO: remove old stuff
	* configure.ac: version bump

2005-06-06  David Schleef  <ds@schleef.org>

	* Makefile.am: make the docs build correctly, install correctly,
	  and distcheck correctly.
	* configure.ac:
	* docs/Makefile.am:

2005-05-25  David Schleef  <ds@schleef.org>

	* esddsp.c: (dspctl): Patch from Fabian Franz.  Fix
	  behavior of SNDCTL_DSP_GETISPACE ioctl (bug #169680)

2005-05-25  David Schleef  <ds@schleef.org>
