@@ -1,5 +1,9 @@
 2006-08-07  David Schleef  <ds@schleef.org>
 
+	* esd.c: Close file descriptors after startup.  Fixes #333186.
+
+2006-08-07  David Schleef  <ds@schleef.org>
+
 	* esd.conf: Turn autospawning off by default.  Don't use
 	  autospawning.  It doesn't work, and it isn't possible to
 	  make it work.  esd should always be started from the session
